[package]
name = "nearest-neighbor-search-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-rc.3" }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }

serde_json = "*"
futures = "*"
json = "*"
sysinfo = "0.26.8"
glidesort = "*"
kmeans = "0.2.0"
